# raytracer

./: build.sh  build_example.sh  main.cpp  scene.ppm
libRaytracer/: CMakeLists.txt  build_library.sh
libRaytracer/inc/: camera.hpp  light.hpp  lighting.hpp  object.hpp  ray.hpp  renderer.hpp  triangle.hpp  vector3.hpp
libRaytracer/inc/canvas/: canvas.hpp
libRaytracer/inc/interface/: raytracer.hpp
libRaytracer/inc/object/: plane.hpp  sphere.hpp
libRaytracer/inc/scene/: scene.hpp
libRaytracer/inc/utils/: color.hpp
libRaytracer/src/camera/: camera.cpp
libRaytracer/src/canvas/: canvas.cpp
libRaytracer/src/interface/: raytracer.cpp
libRaytracer/src/object/: object.cpp  sphere.cpp  triangle.cpp
libRaytracer/src/operation/: renderer.cpp
libRaytracer/src/scene/: scene.cpp
libRaytracer/src/utils/: color.cpp  light.cpp  lighting.cpp  ray.cpp  vector3.cpp
ui/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  raytracer.pro
